--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
-    "sequelize": "^6.32.1"
+    "pug": "^3.0.2",
+    "sequelize": "^6.32.1",
+    "uuid": "^9.0.0"
   }
 }
