--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "api-tutorial",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "An Novice Employee Detail Management.",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Hariharan Jayachandran",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
