--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Novice Employee Detail Management.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node ./bin/server.js"
   },
   "keywords": [],
   "author": "Hariharan Jayachandran",
@@ -17,6 +17,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
+    "pm2": "^4.2.3",
     "pug": "^3.0.2",
     "sequelize": "^6.32.1",
     "uuid": "^9.0.0"
