--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pm2": "^4.2.3",
     "pug": "^3.0.2",
     "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1",
     "uuid": "^9.0.0"
   }
 }
