--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
+    "password": "hariHARAN-2604",
     "database": "users",
     "host": "localhost",
     "dialect": "mysql"
