--- a/.env.dev
+++ b/.env.dev
@@ -4,3 +4,6 @@ DB_HOST=localhost
 DB_USERNAME=root
 DB_PASSWORD=hariHARAN-2604
 DB_NAME=users
+
+DOMAIN_NAME=http://employee-manager.dv
+ASSET_PATH=assets/
