--- a/.env.dev
+++ b/.env.dev
@@ -6,4 +6,6 @@ DB_PASSWORD=hariHARAN-2604
 DB_NAME=users
 
 DOMAIN_NAME=http://employee-manager.dv
-ASSET_PATH=assets/
+
+ASSET_DOMAIN=http://filestorage.dv
+ASSET_PATH=/assets/
